authenticator initial version